# agilex5e-ed-gsrd

a5ed065es-premium-devkit-oobe/baseline/software/FreeRTOS_helloworld/: CMakeLists.txt
